# Kuber

./: .editorconfig  .gitignore  CHANGELOG.md  PLAN.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.md  requirements.txt  test_output.txt
.github/: copilot-instructions.md
.github/prompts/: new-k8s-resource.prompt.md  new-pyqt5-view.prompt.md  new-service.prompt.md  new-viewmodel.prompt.md  write-tests.prompt.md
.github/workflows/: ci.yml  python-package.yml
docs/: architecture.md
kuber/: __init__.py  app.py  constants.py
kuber/config/: kube_config.py  settings.py
kuber/core/: exceptions.py
kuber/core/cloud/: provider_factory.py
kuber/core/docker/: client.py
kuber/core/git/: client.py
kuber/core/helm/: client.py
kuber/core/kubernetes/: client.py  clusters.py  configmaps.py  custom_resources.py  deployments.py  events.py  logs.py  metrics.py  pods.py  rbac.py  services.py
kuber/core/openshift/: client.py
kuber/models/: cluster_model.py  resource_model.py
kuber/resources/themes/: dark.qss  high_contrast.qss  light.qss
kuber/services/: backup_service.py  monitoring_service.py
kuber/utils/: logger.py  network.py  validators.py
kuber/viewmodels/: app_deploy_vm.py  backup_vm.py  cluster_vm.py  configmap_vm.py  deployment_vm.py  monitoring_vm.py  pod_vm.py  resource_vm.py  service_vm.py  user_vm.py
kuber/views/: main_window.py  splash_screen.py
kuber/views/backup/: backup_view.py  restore_wizard.py
kuber/views/cluster/: cluster_detail_view.py  cluster_list_view.py  cluster_switcher.py
kuber/views/common/: ansi_parser.py  base_worker.py  error_dialog.py  loading_overlay.py  namespace_selector.py  namespace_store.py  resource_detail_panel.py  search_bar.py  theme_manager.py  yaml_editor.py
kuber/views/deployment/: deploy_progress_dialog.py  deploy_wizard.py
kuber/views/monitoring/: events_view.py  logs_view.py  metrics_view.py
kuber/views/resources/: base_resource_view.py  configmaps_view.py  custom_resource_view.py  deployments_view.py  pods_view.py  services_view.py
kuber/views/settings/: cloud_settings_view.py  settings_view.py
kuber/views/users/: audit_log_view.py  role_editor_dialog.py  users_view.py
tests/: conftest.py
tests/unit/models/: __init__.py  test_resource_model.py
(+29 files in other folders)
